# strong_type

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/project/sandbox/: CMakeLists.txt
example/project/sandbox/source/: main.cpp
example/script/: cmake_release_flags.py
source/FOSL/: strong_type.cpp  strong_type.hpp
source/FOSL/strong_type/: value_wrapper.hpp
test/: CMakeLists.txt
test/unsorted/: CMakeLists.txt
test/unsorted/source/: main.cpp
